--- a/CISE/nbproject/private/private.properties
+++ b/CISE/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=tomcat80:home=D:\\Documentos\\UCH\\IX-CICLO-UCH\\TRABAJO GR
 j2ee.server.middleware=C:/Program Files/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=SL[/Browsers/FirefoxBrowser
+selected.browser=Chrome
 user.properties.file=C:\\Users\\USER\\AppData\\Roaming\\NetBeans\\13\\build.properties
